--- a/Ex1_artists.qmd
+++ b/Ex1_artists.qmd
@@ -10,12 +10,19 @@ author: "Tomer Zipori"
 ```{r}
 #| output: false
 library(tidyverse)
+library(tidytuesdayR)
+library(remotes)
+
+# remotes::install_github("thomas-neitmann/scalesextra")
+library(scalesextra)
 ```
 
 ### Loading Data
 
 ```{r}
-data <- read.csv("data/artists.csv")
+tuesdata <- tidytuesdayR::tt_load('2023-01-17')
+
+data <- tuesdata$artists
 
 glimpse(data)
 ```
@@ -45,13 +52,17 @@ plot <- data_clean %>%
   ggplot(aes(x = year, y = space_ratio, fill = artist_identity, col = artist_identity)) +
   geom_point(show.legend = F) +
   geom_line() +
+  scale_color_manual(values = c("#4285F4", "#34A853", "#FBBC05", "#EA4335")) +
   scale_x_continuous(breaks = seq(min(data_clean$year), max(data_clean$year), by = 10)) +
+  scale_y_pct() +
   xlab("Year of publish") +
   ylab("Average area dedicated to artist (cm^2)") +
   labs(title = "Printing space dedicated to artists of different identites in art history textbooks",
-       subtitle = "Showing the relative space dedicated to text and figure of artists in textbooks") +
-  guides(col = guide_legend(title = "Artist Identity")) +
+       subtitle = "Showing the average % of page space dedicated to text and figure of artists in textbooks") +
+  guides(col = guide_legend(title = "Artist Identity", reverse = T)) +
   theme_classic()
 
 plot
+
+# ggsave("artists_v2.png", plot = plot, path = "plots/", width = 16, height = 9)
 ```
