--- a/text_analysis/text_analysis.qmd
+++ b/text_analysis/text_analysis.qmd
@@ -186,29 +186,32 @@ test_dtm <- dtm_partial_no_stopwords[setdiff(docnames(dtm_partial_no_stopwords),
 
 ## Naive-Bayes classifier
 
-A Naive-Bayes classifier predicts the class (in this case of a document) in the following way:  
-1. From the training data, the likelihood of each token to appear in documents of each class is calculated. For example, if the word *giveaway* appeared in $11$% of the documents in the first class, and in $2$% of the documents in the second class, the likelihood of it in each class is:  
+A Naive-Bayes classifier predicts the class (in this case of a document) in the following way:\
+1. The likelihood of each token to appear in documents of each class is calculated from the training data. For example, if the word *giveaway* appeared in $11$% of the documents in the first class, and in $2$% of the documents in the second class, the likelihood of it in each class is:\
 $$
 \displaylines{p(giveaway\ |\ class\ 1)=0.11\\p(giveaway\ |\ class\ 2)=0.02}
 $$
-  
-2. The prior probability of each document to be classified to each class is also learned from the training data, and it is the base-rate frequencies of the two classes.  
-3. For each document in the test set, the likelihood of it belonging to each class is calculated by multiplying the likelihoods of the tokens appearing in it. So if a document is for example, the sentence *I like turtles*, then the likelihood of it to belong class 1 is:  
-$$
-\displaylines{p(I\ |\ class\ 1)\cdotp(like\ |\ class\ 1)\cdotp(turtles\ |\ class\ 1)}
-$$
-More formally, if a document belong to a certain class $k$, then it's likelihood of being comprised of a set of tokens $t$ is:  
-$$
-\prod_{i=1}^{n}p(t_i\ |\ class\ k)
-$$
-4. According to Bayes theorem, the probability of the document to belong to class $k$ - the posterior probability - is proportional to the product of the likelihood of it's tokens given this class and the prior probability of any document to belong to this class:  
-$$
-p(class\ k\ |\ t) \propto p(t\ |\ class\ k)\cdotp(class\ k)
-$$
 
-5. Because the Naive-Bayes classifier is comparing between classes, the standardizing term is not needed. The class that has the largest product of prior and likelihood is the class the document will be classified to.
+2.  The prior probability of each document to be classified to each class is also learned from the training data, and it is the base-rate frequencies of the two classes.\
+
+3.  For each document in the test set, the likelihood of it given it is from each of the classes is calculated by multiplying the likelihoods of the tokens appearing in it. So if a document is for example the sentence *I like turtles*, then the likelihood of it to belong class 1 is:\
+    $$
+    \displaylines{p(I\ |\ class\ 1)\cdotp(like\ |\ class\ 1)\cdotp(turtles\ |\ class\ 1)}
+    $$  
+    More formally, if a document belong to a certain class $k$, then it's likelihood of being comprised of a set of tokens $t$ is:\
+    $$
+    \prod_{i=1}^{n}p(t_i\ |\ class\ k)
+    $$  
+
+4.  According to Bayes theorem, the probability of the document to belong to class $k$ - the posterior probability - is proportional to the product of the likelihood of it's tokens given this class and the prior probability of any document to belong to this class:\
+    $$
+    p(class\ k\ |\ t) \propto p(t\ |\ class\ k)\cdotp(class\ k)
+    $$  
+
+5.  Because the Naive-Bayes classifier is comparing between classes, the standardizing term is not needed. The class that has the largest product of prior and likelihood is the class the document will be classified to.
 
 ## Fitting the model
+
 ```{r}
 nb_model <- textmodel_nb(train_dtm, y = docvars(train_dtm, "retweeted"))
 ```
@@ -278,4 +281,3 @@ coefs |>
         axis.text = element_text(color = col_vec[1]),
         plot.title = element_text(size = 16, color = col_vec[1], hjust = .5, family = "serif", face = "bold"))
 ```
-
