final project - done!

--- a/final_project/references.bib
+++ b/final_project/references.bib
@@ -9,3 +9,10 @@
 	date = {1980},
 	note = {Publisher: American Psychological Association},
 }
+
+@article{kuhn_futility_2014,
+	title = {Futility analysis in the cross-validation of machine learning models},
+	journaltitle = {{arXiv} preprint {arXiv}:1405.6974},
+	author = {Kuhn, Max},
+	date = {2014},
+}
